The CMS container overflow probelem fixed

--- a/assets/styles/organisms/cms.scss
+++ b/assets/styles/organisms/cms.scss
@@ -1,8 +1,8 @@
 @mixin cms {
   .container {
-    width: 95%;
-    margin-right: 5%;
-    margin-top: $gutter;
+    @include landscape {
+      @include cms-landscape;
+    }
     
     aside {
       .cms {
@@ -32,7 +32,11 @@
   }
 }
 
-
+@mixin cms-landscape {
+  width: 95%;
+  margin-right: 5%;
+  margin-top: $gutter;
+}
 
 @mixin cms-figures {
   img {
